fix: Mermaid on small screen

--- a/assets/parts/_article.scss
+++ b/assets/parts/_article.scss
@@ -376,6 +376,14 @@ article {
             display: inline;
         }
     }
+    .mermaid {
+        text-align: center;
+        @media screen and (min-width: 768px) {
+            svg{
+                max-width: 90% !important;
+            }
+        }
+    }
 }
 
 .yue {
